tests/testsuite/snapshots/testsuite__tests__cases__type_error_with_grouping.lox.snap
---
source: tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - tests/cases/type_error_with_grouping.lox
---
success: false
exit_code: 70
----- stdout -----

----- stderr -----
Error: type error in binary operator `+`: lhs has type `Number`, but rhs has type `String`
   ╭─[tests/cases/type_error_with_grouping.lox:1:1]
   │
 1 │ (42 + 27) + "something";
   │ ────┬──── ┬ ─────┬─────  
   │     │     │      ╰─────── this is of type `String`
   │     │     │              
   │     │     ╰────────────── the operator in question
   │     │                    
   │     ╰──────────────────── this is of type `Number`
   │ 
   │ Help: operator `+` can only be applied to two numbers or two strings
───╯
